--- a/indexKalkulator.html
+++ b/indexKalkulator.html
@@ -10,7 +10,7 @@
 	<body>
 		<div class="calculator">
 			<div class="row">
-				<div class = "calculator-message col-lg-6" ><marquee>Web Calculator| iskasipahune</marquee></div>
+				<div class = "calculator-message col-lg-6" ><marquee>Web Calculator|physicsDigit</marquee></div>
 				<div id="dateTime" class = "calculator-date col-lg-6"></div>
 			</div>
 			<input type="text" class="calculator-screen"  value="0" disabled>
